chore: I have started working on the styling for the past-registered-list view

--- a/src/assets/styles/pastLists.scss
+++ b/src/assets/styles/pastLists.scss
@@ -5,4 +5,10 @@
         @include large-header;
         color: white;
     }
+
+    #delete_table_button {
+        @include btn-small;
+        width: 150px;
+        margin: auto;
+    }
 }
