--- a/src/assets/styles/displayCurrentFoodBankList.scss
+++ b/src/assets/styles/displayCurrentFoodBankList.scss
@@ -16,40 +16,21 @@
     }
 
     form {
-        width: 960px;
-        margin: auto;
-        @include paragraph-large;
-        border-radius: 4px;
-        box-shadow: 0 4px 12px $form-border-color;
+        @include table-container;
 
         table {
-            width: 100%;
-            margin: auto;
-            border-collapse: collapse;
-            border-radius: 16px;
+            @include list-table;
 
             th {
-                padding-bottom: .5rem;
-                text-align: left;
-                padding-left: 2rem;
-                border-right: 1px solid $form-border-color;
-                padding-top: 2rem;
-                @include paragraph-large;
+                @include list-table-header;
             }
 
             td {
-                padding-bottom: .5rem;
-                text-align: left;
-                padding-left: 2rem;
-                padding-top: 1rem;
-                border-right: 1px solid $form-border-color;
-                @include paragraph-medium;
-
-
+                @include list-table-data;
             }
 
             tr {
-                border-bottom: 1px solid $form-border-color;
+                @include list-table-row;
             }
 
             #attended {
