--- a/src/assets/styles/library.scss
+++ b/src/assets/styles/library.scss
@@ -220,3 +220,39 @@ $form-border-color: rgba(153, 102, 153, .5);
     z-index: 10;
 }
 
+@mixin table-container {
+    width: 960px;
+    margin: auto;
+    @include paragraph-large;
+    border-radius: 4px;
+    box-shadow: 0 4px 12px $form-border-color;
+}
+@mixin list-table {
+    width: 100%;
+    margin: auto;
+    border-collapse: collapse;
+    border-radius: 16px;
+}
+
+@mixin list-table-header {
+    padding-bottom: .5rem;
+    text-align: left;
+    padding-left: 2rem;
+    border-right: 1px solid $form-border-color;
+    padding-top: 2rem;
+    @include paragraph-large;
+}
+
+@mixin list-table-data {
+    padding-bottom: .5rem;
+    text-align: left;
+    padding-left: 2rem;
+    padding-top: 1rem;
+    border-right: 1px solid $form-border-color;
+    @include paragraph-medium;
+
+}
+
+@mixin list-table-row {
+    border-bottom: 1px solid $form-border-color;
+}
