chore: I have removed a few unwanted lines from the past foodbank list table and the current foodbank list table

--- a/src/assets/styles/displayCurrentFoodBankList.scss
+++ b/src/assets/styles/displayCurrentFoodBankList.scss
@@ -71,6 +71,23 @@
                 width: 75px;
                 @include paragraph-large;
             }
+
+            td:last-of-type {
+                border-right: none;
+            }
+
+            td:nth-last-child(2) {
+                border-right: none;
+            }
+
+            th:last-of-type {
+                border-right: none;
+            }
+
+            tr:last-of-type {
+                border-bottom: none;
+            }
+
         }
     }
 
