chore: I added some styling to the search page and updated the color and font that is used to display when the applicant was last modified.

--- a/src/assets/styles/searchApplicants.scss
+++ b/src/assets/styles/searchApplicants.scss
@@ -51,6 +51,11 @@
         margin-right: auto;
     }
 
+    .date_altered {
+        @include paragraph-medium;
+        color: $orange;
+    }
+
 }
 
 @media (max-width: 1023px) {
