--- a/src/assets/styles/editDisplay.scss
+++ b/src/assets/styles/editDisplay.scss
@@ -11,11 +11,13 @@
 
     label{
         @include medium-label;
+        text-align: left;
     }
 
     .input_pair {
         width: 100%;
         margin-top: 1.25rem;
+        text-align: left;
     }
 
     input {
