--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -4,3 +4,36 @@
     @include large-header;
     color: white;
 }
+
+#content_wrapper {
+    h1{
+        @include paragraph-large;
+        color: white;
+        text-align: center;
+        margin-top: 6rem;
+    }
+
+    .icon_wrapper {
+        display: flex;
+        flex-direction: row;
+        row-gap: 2rem;
+        column-gap: 2rem;
+        justify-content: center;
+        align-items: center;
+        margin: 2rem 0 0 0;
+    }
+
+    .dashboard_icon {
+        margin: 0;
+    }
+
+}
+
+@media (max-width: 1024px) {
+    #content_wrapper {
+        .icon_wrapper {
+            flex-direction: column;
+            align-items:center;
+        }
+    }
+}
