chore: I have added the footer to all of the pages that need a footer

--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -55,7 +55,7 @@
         text-align: center;
         @include paragraph-small;
         line-height: 10px;
-        padding-bottom: .5rem;
+        padding-bottom: 6px;
         background-color: $form-border-color;
     }
 
