--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -1,10 +1,9 @@
 @import "./library.scss";
 
 #footer_wrapper {
-    position: fixed;
+    position: absolute;
     bottom: 0;
-    margin-bottom: 0;
-    padding-bottom: 0;
+    margin-top: 2rem;
     width: 100vw;
     background-color: $chapel-light-gray;
     display: flex;
@@ -57,6 +56,7 @@
         line-height: 10px;
         padding-bottom: 6px;
         background-color: $form-border-color;
+        color: $white;
     }
 
 }
