--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -6,30 +6,26 @@
 }
 
 #content_wrapper {
-    max-width: 560px;
-    margin: auto auto 6rem auto;
+    color: white;
+    max-width: 1250px;
+    min-width: 560px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 2rem;
+    column-gap: 2rem;
+    margin: auto;
 
-    h1{
-        @include paragraph-large;
-        color: white;
-        text-align: center;
-        margin-top: 6rem;
-    }
-
-    .icon_wrapper {
+    #general_statistics{
         display: flex;
         flex-direction: row;
-        row-gap: 2rem;
-        column-gap: 2rem;
+        width: 100%;
         justify-content: center;
-        align-items: center;
-        margin: 2rem 0 0 0;
+        column-gap: 2rem;
+        row-gap: 2rem;
+        flex-wrap: wrap;
     }
-
-    .dashboard_icon {
-        margin: 0;
-    }
-
 }
 
 @media (max-width: 1024px) {
