chore: I have re-factored the statisticCard and the dashboard.jsx files and updated some of the styling

--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -17,7 +17,7 @@
     column-gap: 2rem;
     margin: auto;
 
-    #general_statistics{
+    /*#general_statistics{
         display: flex;
         flex-direction: row;
         width: 100%;
@@ -25,7 +25,7 @@
         column-gap: 2rem;
         row-gap: 2rem;
         flex-wrap: wrap;
-    }
+    }*/
 }
 
 @media (max-width: 1024px) {
