chore: I have finished the styling for the dashboard

--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -6,38 +6,22 @@
 }
 
 #content_wrapper {
-    color: white;
-    max-width: 1250px;
-    min-width: 560px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    row-gap: 2rem;
+    @include shadow-form;
+    padding-left: 0;
+    padding-right: 0;
     column-gap: 2rem;
-    margin: auto;
+    row-gap: 1rem;
+    margin-top: 6rem;
+    color: white;
+    width: 80vw; 
+    margin-bottom: 6rem;
+    row-gap: 0;
 
-    /*#general_statistics{
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        justify-content: center;
-        column-gap: 2rem;
-        row-gap: 2rem;
-        flex-wrap: wrap;
-    }*/
-}
-
-@media (max-width: 1024px) {
-    #content_wrapper {
-        max-width: 100%;
-        width: 100%;
-        padding-right: 1rem;
-        padding-left: 1rem;
-        
-        .icon_wrapper {
-            flex-direction: column;
-            align-items:center;
-        }
+    .header_wrapper {
+        width: 80vw;
+        max-width: 560px;
+        margin-top: -2rem;
+        @include paragraph-large;
+        border-radius: 16px 16px 0 0;
     }
 }
