chore: I have started creating the middle section form and have most of the preliminary styling done

--- a/src/assets/styles/printedApplicantForm.scss
+++ b/src/assets/styles/printedApplicantForm.scss
@@ -22,6 +22,14 @@
         }
     }
 
+    #fields{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+  
+
     #top_heading {
         display: flex;
         flex-direction: column;
