chore: I have finished populating all of the content that needed added for the printed form, I just need to start styling everything

--- a/src/assets/styles/printedApplicantForm.scss
+++ b/src/assets/styles/printedApplicantForm.scss
@@ -1,6 +1,9 @@
 @import './library.scss';
 
 #printed_form_wrapper {
+    background-color: white;
+    color: black;
+    
     h1 {
         @include paragraph-small;
     }
