--- a/src/assets/styles/printedInputPair.scss
+++ b/src/assets/styles/printedInputPair.scss
@@ -3,6 +3,7 @@
 .input_pair {
     display: flex;
     flex-direction: column;
+    color: black;
 
     .all_values {
         display: flex; 
@@ -15,7 +16,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        border-top: solid 1px white;
+        border-top: solid 1px black;
         width: 350px;
     }
 
