--- a/src/assets/styles/printedApplicantForm.scss
+++ b/src/assets/styles/printedApplicantForm.scss
@@ -3,6 +3,8 @@
 #printed_form_wrapper {
     background-color: white;
     color: black;
+    max-width: 1250px;
+    margin: auto;
     
     h1 {
         @include paragraph-small;
@@ -12,6 +14,17 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+
+        #person_count_wrapper {
+            position: absolute;
+            right: 325px;
+            font-size: 12px;
+        }
+
+        #pa_logo {
+            width: 250px;
+            height: 120px;
+        }
     }
 
     #person_count_wrapper {
