--- a/src/assets/styles/printedPersonCount.scss
+++ b/src/assets/styles/printedPersonCount.scss
@@ -2,20 +2,21 @@
 
 #person_count_table{
     color: black;
+    font-size: 8px;
+    border-collapse: collapse;
 
-    tr {
-        line-height: 1px;
-    }
-    .title {
-        text-align: right;
-    }
-    .count{
-        border-bottom: solid 1px black;
-        width: 70px;
-        padding-bottom: .25rem;
-        text-align: center;
-    }
+        tr {
+            line-height: 2px;
+        }
 
-    
+        .title {
+            text-align: right;
+        }
+        .count{
+            border-bottom: solid 1px black;
+            width: 70px;
+            padding-bottom: .25rem;
+            text-align: center;
+        }
 
 }
