chore: I have finished up the total household income table on the printed applicant form page

--- a/src/assets/styles/printedApplicantForm.scss
+++ b/src/assets/styles/printedApplicantForm.scss
@@ -87,6 +87,15 @@
     .paragraph_wrapper {
         padding-left: 95px;
         padding-right: 95px;
+        font-size: 12px;
+    }
+
+    #house_hold_income_wrapper {
+        margin-left: 95px;
+        margin-right: 95px;
+        font-size: 10px;
+        font-weight: 600;
+        border: solid 1px;
     }
     
 }
