chore: I added an id to the total household income table, so the style properties don't overwrite any other tables

--- a/src/assets/styles/printedIncomeTable.scss
+++ b/src/assets/styles/printedIncomeTable.scss
@@ -1,6 +1,6 @@
 @import './library.scss';
 
-table {
+#household_income_table {
     width: 100%;
     border-collapse: collapse;
     text-align: center;
