--- a/src/assets/styles/printedApplicantForm.scss
+++ b/src/assets/styles/printedApplicantForm.scss
@@ -19,7 +19,7 @@
 
         #person_count_wrapper {
             position: absolute;
-            right: 30%;
+            margin-left: 475px;
             font-size: 12px;
         }
 
@@ -173,6 +173,7 @@
         border: solid 1px black;
         margin-left: 95px;
         margin-right: 95px;
+        margin-top: 85px;
 
         .paragraph_wrapper {
             padding: 0;
@@ -257,6 +258,7 @@
         flex-direction: row;
         justify-content: space-between;
         margin-top: 0;
+        margin-bottom: 12px;
 
         .line_bottom_text {
             display: flex;
@@ -278,11 +280,20 @@
             margin-top: -2rem;
 
             #small_box {
-                width: 10px;
+                width: 11px;
                 height: 14px;
                 border: solid 2px black;
             }
         }
+    }
+
+    .signature {
+        font-size: 11px;
+        font-weight: 200;
+    }
+
+    .marg_left {
+        margin-left: 2px;
     }
 
 }
