--- a/src/assets/styles/printedInputPair.scss
+++ b/src/assets/styles/printedInputPair.scss
@@ -3,8 +3,8 @@
 .input_pair {
     display: flex;
     flex-direction: column;
-    color: black;
-    font-size: 12px;
+    color: #002579;
+    font-size: 10px;
     margin-top: -12px;
 
     .all_values {
@@ -23,7 +23,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        border-top: solid 1px black;
+        border-top: solid 1px #002579;
         width: 275px;
     }
 
