--- a/src/assets/styles/printedApplicantForm.scss
+++ b/src/assets/styles/printedApplicantForm.scss
@@ -7,6 +7,7 @@
     margin: auto;
     font-family: arial;
     padding-bottom: 125px;
+    padding-top: 5px;
 
     h1 {
         @include paragraph-small;
@@ -48,6 +49,7 @@
         margin-top: 2px;
         padding-left: 95px;
         padding-right: 95px;
+        margin-bottom: -30px;
 
     }
 
@@ -161,6 +163,7 @@
         margin-left: 95px;
         border: solid 2px black;
         padding: 0;
+        margin-bottom: 140px;
 
         p {
             font-size: 10px;
