chore: I have created a method to circle the household size of the current applicant

--- a/src/assets/styles/printedIncomeTable.scss
+++ b/src/assets/styles/printedIncomeTable.scss
@@ -34,4 +34,9 @@
         font-style: italic;
         font-family: times;
     }
+
+    .circle_family_size {
+        border: solid 1px #002579;
+        border-radius: 16px;
+    }
 }
