--- a/src/assets/styles/printedInputPair.scss
+++ b/src/assets/styles/printedInputPair.scss
@@ -13,6 +13,7 @@
         justify-content: space-between;
         line-height: 1px;
         padding-bottom: 0;
+        width: 275px;
     }
 
     .value {
