chore: I have removed some of the placeholder text from the printed applicant form

--- a/src/assets/styles/printedIncomeTable.scss
+++ b/src/assets/styles/printedIncomeTable.scss
@@ -36,7 +36,8 @@
     }
 
     .circle_family_size {
-        border: solid 1px #002579;
+        border-top: solid 1px #002579;
+        border-bottom: solid 1px #002579;
         border-radius: 16px;
     }
 }
