--- a/src/assets/styles/printedInputPair.scss
+++ b/src/assets/styles/printedInputPair.scss
@@ -1,6 +1,6 @@
 @import "./library.scss";
 
-.input_pair {
+.printed_input_pair {
     display: flex;
     flex-direction: column;
     color: #002579;
