--- a/src/assets/styles/printedApplicantForm.scss
+++ b/src/assets/styles/printedApplicantForm.scss
@@ -1,320 +1,350 @@
 @import './library.scss';
 
-#printed_form_wrapper {
-    background-color: white;
-    color: #002579;
-    max-width: 816px;
-    margin: auto;
-    font-family: arial;
-    padding-bottom: 125px;
-    padding-top: 5px;
+#page_wrapper {
+    #printed_form_wrapper {
+        background-color: white;
+        color: #002579;
+        max-width: 816px;
+        margin: auto;
+        font-family: arial;
+        padding-bottom: 20px;
 
-    h1 {
-        @include paragraph-small;
-    }
-
-    #logo_individuals_wrapper {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-
-        #person_count_wrapper {
-            position: absolute;
-            margin-left: 475px;
-            font-size: 12px;
-            
+        h1 {
+            @include paragraph-small;
         }
 
-        #pa_logo {
-            width: 245px;
-            height: 100px;
-        }
-    }
-
-    #person_count_wrapper {
-        display: flex;
-        flex-direction: row;
-
-        #title_wrapper {
-            display: flex;
-            flex-direction: column;
-
-        }
-    }
-
-    #fields {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-top: 2px;
-        padding-left: 95px;
-        padding-right: 95px;
-        margin-bottom: -30px;
-
-    }
-
-
-
-
-    #top_heading {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: -10px;
-
-        h2 {
-            font-size: 14px;
-            font-weight: 700;
-        }
-
-        h4 {
-            margin-top: 4px;
-            font-size: 10px;
-        }
-
-        h3 {
-            font-family: 'Times New Roman', Times, serif;
-            font-weight: 520;
-            margin-top: 0;
-            font-size: 12px;
-        }
-
-        .tefap_text {
-            margin-top: 8px;
-            line-height: 0;
-            padding-top: 0;
-            font-size: 14px;
-            font-weight: 700;
-        }
-    }
-
-    .paragraph_wrapper {
-        padding-left: 95px;
-        padding-right: 95px;
-        font-size: 11px;
-        margin-top: 27px;
-
-        .all_caps {
-            font-weight: 900;
-            font-size: 10px;
-        }
-    }
-
-    #all_caps_wrapper {
-        margin-bottom: 28px;
-    }
-
-    #house_hold_income_wrapper {
-        margin-left: 95px;
-        margin-right: 95px;
-        font-size: 10px;
-        font-weight: 600;
-        border: solid 1px #002579;
-        margin-top: -5px;
-    }
-
-    #recipient_signature {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-right: 95px;
-        margin-left: 95px;
-        border-top: solid 2px black;
-        padding-top: 6px;
-
-        .paragraph_wrapper {
-            padding: 0;
-            font-weight: 550;
-            margin-top: -6px;
-
-            p {
-                line-height: 1px;
-            }
-        }
-    }
-
-    #arrow_text {
-        margin-right: 95px;
-        margin-left: 95px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        column-gap: 12px;
-
-        #red_arrow {
-            width: 50px;
-            height: 25px;
-        }
-
-        p {
-            font-size: 11px;
-        }
-    }
-
-    #red_text {
-        text-align: center;
-        font-size: 14px;
-        font-weight: 550;
-        color: red;
-    }
-
-    #boxed_text {
-        margin-right: 95px;
-        margin-left: 95px;
-        border: solid 2px black;
-        padding: 0;
-        margin-bottom: 140px;
-
-        p {
-            font-size: 10px;
-            margin-left: 4px;
-            color: black;
-        }
-    }
-
-    .second_page_text {
-        font-size: 13px;
-        line-height: 18px;
-        margin-top: 20px;
-        color: black;
-    }
-
-    .bold_p {
-        font-weight: 600;
-    }
-
-    #institution_wrapper {
-        margin-bottom: 70px;
-    }
-
-    #bottom_box_container {
-        border: solid 1px black;
-        margin-left: 95px;
-        margin-right: 95px;
-
-        .paragraph_wrapper {
-            padding: 0;
-            color: #002579;
-            margin-top: 0;
-        }
-
-        #tefap_box {
-            border: solid 1px black;
-            text-align: center;
-            border-bottom: solid 2px black;
-            font-weight: 550;
-        }
-    }
-
-    #bottom_date {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-
-        #date_line {
-            width: 180px;
-            border-bottom: solid 1px black;
-            margin-left: 1rem;
-        }
-    }
-
-    #authorize_bottom {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        margin-left: 2px;
-        margin-top: 6px;
-        margin-bottom: 45px;
-
-        .auth_row {
+        #logo_individuals_wrapper {
             display: flex;
             flex-direction: row;
-            justify-content: flex-start;
-            margin-bottom: -1rem;
+            justify-content: center;
 
-            .authorize_line {
-                width: 180px;
-                border-bottom: solid 1px #002579;
-                margin-right: .25rem;
+            #person_count_wrapper {
+                position: absolute;
+                margin-left: 475px;
+                font-size: 12px;
+
+            }
+
+            #pa_logo {
+                width: 245px;
+                height: 110px;
             }
         }
-    }
 
-    #signatures_wrapper {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-top: 45px;
+        #person_count_wrapper {
+            display: flex;
+            flex-direction: row;
+
+            #title_wrapper {
+                display: flex;
+                flex-direction: column;
+
+            }
+        }
+
+        #fields {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-top: 2px;
+            padding-left: 80px;
+            padding-right: 80px;
+            margin-bottom: -30px;
+
+        }
 
 
-        .line_bottom_text {
+
+
+        #top_heading {
             display: flex;
             flex-direction: column;
+            align-items: center;
+            margin-top: -10px;
 
-            .line {
-                width: 275px;
-                border-bottom: solid 1px black;
+            h2 {
+                font-size: 14px;
+                font-weight: 700;
             }
 
-            .signature {
-                margin-top: -.75rem;
+            h4 {
+                margin-top: 4px;
+                font-size: 10px;
+            }
+
+            h3 {
+                font-family: 'Times New Roman', Times, serif;
+                font-weight: 520;
+                margin-top: 0;
+                font-size: 12px;
+            }
+
+            .tefap_text {
+                margin-top: 8px;
+                line-height: 0;
+                padding-top: 0;
+                font-size: 14px;
+                font-weight: 700;
             }
         }
 
-        #checkbox {
-            width: 10px;
-            height: 12px;
-            border: solid 1px black;
-            margin-top: .75rem;
-            margin-left: -20px;
+        .paragraph_wrapper {
+            padding-left: 80px;
+            padding-right: 80px;
+            font-size: 11px;
+            margin-top: 27px;
+
+            .all_caps {
+                font-weight: 900;
+                font-size: 10px;
+            }
         }
 
-        #proxy_sig_line {
-            width: 220px;
+        #all_caps_wrapper {
+            margin-bottom: 28px;
         }
-    }
 
-    #final_signatures_wrapper {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-top: 0;
-        margin-bottom: 12px;
+        #house_hold_income_wrapper {
+            margin-left: 80px;
+            margin-right: 80px;
+            font-size: 10px;
+            font-weight: 600;
+            border: solid 1px #002579;
+            margin-top: -5px;
+        }
 
-        .line_bottom_text {
+        #recipient_signature {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-right: 80px;
+            margin-left: 80px;
+            border-top: solid 2px black;
+            padding-top: 6px;
 
-            .line {
-                width: 275px;
-                border-bottom: solid 1px black;
-                margin-bottom: -.75rem;
+            .paragraph_wrapper {
+                padding: 0;
+                font-weight: 550;
+                margin-top: -6px;
+
+                p {
+                    line-height: 1px;
+                }
             }
         }
 
-        #box_text {
+        #arrow_text {
+            margin-right: 80px;
+            margin-left: 80px;
             display: flex;
             flex-direction: row;
             align-items: center;
-            column-gap: 12px;
-            padding-right: 100px; 
-            margin-top: -2rem;
+            column-gap: 2px;
 
-            #small_box {
-                width: 11px;
-                height: 14px;
-                border: solid 2px black;
+            #red_arrow {
+                width: 63px;
+                height: 25px;
             }
+
+            p {
+                font-size: 10px;
+            }
+        }
+
+        #red_text {
+            text-align: center;
+            font-size: 14px;
+            font-weight: 550;
+            color: red;
+        }
+
+        #boxed_text {
+            margin-right: 80px;
+            margin-left: 80px;
+            border: solid 2px black;
+            padding: 0;
+            margin-bottom: 140px;
+
+            p {
+                font-size: 10px;
+                margin-left: 4px;
+                color: black;
+            }
+        }
+
+        .second_page_text {
+            font-size: 13px;
+            line-height: 18px;
+            margin-top: 20px;
+            color: black;
+        }
+
+        .bold_p {
+            font-weight: 600;
+        }
+
+        #institution_wrapper {
+            margin-bottom: 70px;
+        }
+
+        #bottom_box_container {
+            border: solid 1px black;
+            margin-left: 80px;
+            margin-right: 80px;
+
+            .paragraph_wrapper {
+                padding: 0;
+                color: #002579;
+                margin-top: 0;
+            }
+
+            #tefap_box {
+                border: solid 1px black;
+                text-align: center;
+                border-bottom: solid 2px black;
+                font-weight: 550;
+            }
+        }
+
+        #bottom_date {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+
+            #date_line {
+                width: 180px;
+                border-bottom: solid 1px black;
+                margin-left: 1rem;
+            }
+        }
+
+        #authorize_bottom {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            margin-left: 2px;
+            margin-top: 6px;
+            margin-bottom: 45px;
+
+            .auth_row {
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                margin-bottom: -1rem;
+
+                .authorize_line {
+                    width: 180px;
+                    border-bottom: solid 1px #002579;
+                    margin-right: .25rem;
+                }
+            }
+        }
+
+        #signatures_wrapper {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-top: 45px;
+
+
+            .line_bottom_text {
+                display: flex;
+                flex-direction: column;
+
+                .line {
+                    width: 275px;
+                    border-bottom: solid 1px black;
+                }
+
+                .signature {
+                    margin-top: -.75rem;
+                }
+            }
+
+            #checkbox {
+                width: 10px;
+                height: 12px;
+                border: solid 1px black;
+                margin-top: .75rem;
+                margin-left: -20px;
+            }
+
+            #proxy_sig_line {
+                width: 220px;
+            }
+        }
+
+        #final_signatures_wrapper {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-top: 0;
+            margin-bottom: 12px;
+
+            .line_bottom_text {
+                display: flex;
+                flex-direction: column;
+
+                .line {
+                    width: 275px;
+                    border-bottom: solid 1px black;
+                    margin-bottom: -.75rem;
+                }
+            }
+
+            #box_text {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                column-gap: 12px;
+                padding-right: 100px;
+                margin-top: -2rem;
+
+                #small_box {
+                    width: 11px;
+                    height: 14px;
+                    border: solid 2px black;
+                }
+            }
+        }
+
+        .signature {
+            font-size: 11px;
+            font-weight: 200;
+        }
+
+        .marg_left {
+            margin-left: 2px;
         }
     }
 
-    .signature {
-        font-size: 11px;
-        font-weight: 200;
-    }
+    .print_button {
+        @include btn-small;
+        position: fixed;
+        bottom: 2rem;
+        margin: auto;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: $purple;
 
-    .marg_left {
-        margin-left: 2px;
+        &:hover {
+            background-color: $orange;
+        }
     }
+}
 
+@media print {
+    #page_wrapper {
+        .header_wrapper {
+            display: none;
+        }
+
+        nav {
+            display: none;
+        }
+
+        button {
+            display: none;
+        }
+    }
 }
