chore: I have made it so that the top of the income table prints the correct color

--- a/src/assets/styles/printedIncomeTable.scss
+++ b/src/assets/styles/printedIncomeTable.scss
@@ -41,3 +41,22 @@
         border-radius: 16px;
     }
 }
+
+@media print {
+    #household_income_table {
+        caption {
+            -webkit-print-color-adjust:exact;
+            print-color-adjust:exact;
+        }
+    
+        #headings_top_row {
+            -webkit-print-color-adjust:exact;
+            print-color-adjust:exact;
+        }
+    
+        #headings_row {
+            -webkit-print-color-adjust:exact;
+            print-color-adjust:exact;
+    }
+}
+}
