--- a/src/assets/styles/printedApplicantForm.scss
+++ b/src/assets/styles/printedApplicantForm.scss
@@ -5,6 +5,7 @@
         background-color: white;
         color: #002579;
         max-width: 816px;
+        width: 816px;
         margin: auto;
         font-family: arial;
         padding-bottom: 20px;
@@ -47,9 +48,9 @@
             flex-direction: row;
             justify-content: space-between;
             margin-top: 2px;
-            padding-left: 80px;
-            padding-right: 80px;
-            margin-bottom: -30px;
+            padding-left: 95px;
+            padding-right: 95px;
+            margin-bottom: -35px;
 
         }
 
@@ -89,8 +90,8 @@
         }
 
         .paragraph_wrapper {
-            padding-left: 80px;
-            padding-right: 80px;
+            padding-left: 95px;
+            padding-right: 95px;
             font-size: 11px;
             margin-top: 27px;
 
@@ -105,8 +106,8 @@
         }
 
         #house_hold_income_wrapper {
-            margin-left: 80px;
-            margin-right: 80px;
+            margin-left: 95px;
+            margin-right: 95px;
             font-size: 10px;
             font-weight: 600;
             border: solid 1px #002579;
@@ -117,8 +118,8 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            margin-right: 80px;
-            margin-left: 80px;
+            margin-right: 95px;
+            margin-left: 95px;
             border-top: solid 2px black;
             padding-top: 6px;
 
@@ -134,8 +135,8 @@
         }
 
         #arrow_text {
-            margin-right: 80px;
-            margin-left: 80px;
+            margin-right: 95px;
+            margin-left: 95px;
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -159,8 +160,8 @@
         }
 
         #boxed_text {
-            margin-right: 80px;
-            margin-left: 80px;
+            margin-right: 95px;
+            margin-left: 95px;
             border: solid 2px black;
             padding: 0;
             margin-bottom: 140px;
@@ -189,8 +190,8 @@
 
         #bottom_box_container {
             border: solid 1px black;
-            margin-left: 80px;
-            margin-right: 80px;
+            margin-left: 95px;
+            margin-right: 95px;
 
             .paragraph_wrapper {
                 padding: 0;
@@ -346,5 +347,6 @@
         button {
             display: none;
         }
+
     }
 }
