--- a/src/assets/styles/printedInputPair.scss
+++ b/src/assets/styles/printedInputPair.scss
@@ -6,6 +6,7 @@
     color: #002579;
     font-size: 10px;
     margin-top: -12px;
+    margin-bottom: 12px;
 
     .all_values {
         display: flex; 
